# nationalrail

./: .gitignore  README.md  app.py  cli.py  cli_rich.py  cli_tabulate.py  inky_phat.py  nationalrail.py  pi_touchscreen.py  pyproject.toml  requirements.txt  sample.py  sample_touchscreen.py  station_board.py  touchscreen.py  wok.json
fonts/: ctrld-fixed-13r.pbm  ctrld-fixed-16r.pbm
nationalrail/: __init__.py  base.py  nationalrail.py  touchscreen.py  types.py
style/: departures.css  modern.css  root.css  station.css
templates/: departure_board.txt.jinja2  departures.html  departures.jinja  modern.jinja  station.jinja
