[tool.poetry]
name = "nationalrail"
version = "0.1.0"
description = "Display UK railway departure boards using the Huxley REST API"
authors = ["Mark McLaughlin <mark@mclaughlin.me.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bleach = "^4.1.0"
click = "^8.0.3"
requests = "^2.27.1"
Pillow = "^9.0.0"
python-dateutil = "^2.8.2"
python-decouple = "^3.5"
rich = "^11.0.0"
Flask = "^2.0.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
types-python-dateutil = "^2.8.8"
types-Pillow = "^9.0.5"
flake8 = "^4.0.1"
black = "^21.12b0"
types-bleach = "^4.1.4"
types-requests = "^2.27.7"
types-tabulate = "^0.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
